--- a/lume_sales/views/sale.xml
+++ b/lume_sales/views/sale.xml
@@ -31,6 +31,12 @@
                 <!-- <field name="order_line" position="attributes">
                     <attribute name="widget">so_section_and_note</attribute>
                   </field> -->
+                  <field name="validity_date" position="replace">
+                      <field name="validity_date" invisible="1"></field>
+                  </field>
+                  <field name="payment_term_id" position="replace">
+                    <field name="payment_term_id" invisible="1"></field>
+                </field>
             </field>
         </record>
     </data>
