--- a/lume_sales/views/partner.xml
+++ b/lume_sales/views/partner.xml
@@ -75,7 +75,7 @@
         <!-- Replace smart buttons -->
         <xpath expr="//div[@class='oe_button_box']" position="replace">
           <div class="oe_button_box" name="button_box">
-            <button class="oe_stat_button" type="action" name="%(sale.act_res_partner_2_sale_order)d" icon="fa-usd" modifiers="{}" options="{}">
+            <button class="oe_stat_button" type="action" name="%(lume_sales.order_history)d" icon="fa-usd" modifiers="{}" options="{}">
               <field string="Order History" name="sale_order_count" widget="statinfo" modifiers="{'readonly':true}" id="sale_order_count" />
             </button>
             <!-- <button class="oe_stat_button" type="action" name="%(project.project_task_action_from_partner)d"
