--- a/lume_sales/views/sale.xml
+++ b/lume_sales/views/sale.xml
@@ -83,7 +83,7 @@
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">sale.order</field>
             <field name="view_mode">kanban</field>
-            <field name="search_view_id" ref="sale_order_view_search_inherit_sale"/>
+            <field name="search_view_id" ref="sale.sale_order_view_search_inherit_sale"/>
             <field name="view_id" ref="lume_sales.view_sale_order_history_kanban"/>
             <field name="context">{}</field>
             <field name="domain">[('state', 'not in', ('draft', 'sent', 'cancel'))]</field>
