--- a/lume_sales/views/sale.xml
+++ b/lume_sales/views/sale.xml
@@ -44,13 +44,14 @@
             <field name="name">sale.order.history.kanban</field>
             <field name="model">sale.order</field>
             <field name="arch" type="xml">
-                <kanban class="o_kanban_mobile" sample="1">
+                <kanban class="o_kanban_mobile" sample="1" create="false" edit="false">
                     <field name="name"/>
                     <field name="partner_id"/>
                     <field name="amount_total"/>
                     <field name="date_order"/>
                     <field name="state"/>
                     <field name="currency_id"/>
+                    <field name="order_line"/>
                     <!-- <field name="activity_state"/>
                     <progressbar field="activity_state" colors='{"planned": "success", "today": "warning", "overdue": "danger"}'/> -->
                     <templates>
@@ -58,13 +59,25 @@
                             <div t-attf-class="oe_kanban_card oe_kanban_global_click">
                                 <div class="o_kanban_record_top mb16">
                                     <div class="o_kanban_record_headings mt4">
-                                        <strong class="o_kanban_record_title"><span><t t-esc="record.name.value"/></span></strong>
+                                        <strong class="o_kanban_record_title"><span><t t-esc="record.name.value"/></span></strong><br/>
+                                      <span>Order Ref #: <span>Placeholder</span></span><br/>
+                                      <span>Session: <span>Placeholder</span></span><br/>
+                                      <span>Date: <t t-esc="record.date_order.value"/></span><br/>
+                                      <span>Payment Method: <span>Placeholder</span></span>
                                     </div>
                                     <field name="state" widget="label_selection" options="{'classes': {'draft': 'default', 'cancel': 'default', 'done': 'success'}}"/>
                                 </div>
+                                <hr style="border-top: 2px solid #bbb; flex-grow:100"/>
                                 <div class="o_kanban_record_bottom">
-                                    <div class="oe_kanban_bottom_left text-muted">
-                                        <span><t t-esc="record.name.value"/> <t t-esc="record.date_order.value"/></span>
+                                  <field name="order_line" widget="section_and_note_one2many" mode="tree,kanban" attrs="{'readonly': [('state', 'in', ('done','cancel'))]}" on_change="1" modifiers="{'readonly':[['state','in',['done','cancel']]]}" id="order_line">
+                                    <tree create="0" delete="0" editable="bottom">
+                                      <field name="product_id"></field>
+                                      <field name="name"></field>
+                                    </tree>
+                                    </field>
+                                    <!--<span>Test: <t t-esc="record.order_line.product_id.name"></t></span>-->
+                                    <div class="oe_kanban_bottom_left">
+                                        <strong><span>Fulfillment Type Here</span></strong>
                                         <!-- <field name="activity_ids" widget="kanban_activity"/> -->
                                     </div>
                                     <div class="oe_kanban_bottom_right">
@@ -83,7 +96,7 @@
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">sale.order</field>
             <field name="view_mode">kanban</field>
-            <field name="search_view_id" ref="sale.sale_order_view_search_inherit_sale"/>
+            <!-- <field name="search_view_id" ref="sale.sale_order_view_search_inherit_sale"/> -->
             <field name="view_id" ref="lume_sales.view_sale_order_history_kanban"/>
             <field name="context">{}</field>
             <field name="domain">[('state', 'not in', ('draft', 'sent', 'cancel'))]</field>
